--- a/frontend/module.html
+++ b/frontend/module.html
@@ -117,8 +117,8 @@
 
 			<div class="row">
 				<div class="col-lg-8">
-					<!-- <form class="form-contact" action="/netrex/module" id="moduleForm"> -->
-					<form class="form-contact" action="/module" id="moduleForm">
+					<form class="form-contact" action="/netrex/module" id="moduleForm">
+					<!-- <form class="form-contact" action="/module" id="moduleForm"> -->
 						<div class="row">
 
 							<div class="input-group-icon col-sm-12">
@@ -192,7 +192,7 @@
 			</div>
 			<!-- End Table -->
 
-			<p><button type="button" class="btn-outline-secondary" id="show-network" style="display: none;">Network Viewer</button></p>
+			<p><button type="button" class="btn-outline-secondary" id="show-network" style="display: none;">Module Viewer</button></p>
 			
 			<!-- Start Graph Area -->
 			<div id="network-view" style="display: none;">
